--- a/article.html
+++ b/article.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <script async src="https://cse.google.com/cse.js?cx=f045efc3c6f7041b0">
+    </script>
+    <div class="gcse-search"></div>
     <h1>The Future of Computer Science: Emerging Trends and Innovations</h1> 
 
     <p>Computer science has come a long way since its inception. Over the years, it has undergone significant changes, and advancements in technology have transformed the field in ways that were once thought impossible. As we look to the future, there are several emerging trends and innovations that will shape the future of computer science.</p>
